@@ -3074,6 +3074,8 @@ template <typename _From, typename _To>
   template<typename _Tp>
     using unwrap_ref_decay_t = typename unwrap_ref_decay<_Tp>::type;
 
+#define __cpp_lib_bounded_array_traits 201902L
+
   /// True for a type that is an array of known bound.
   template<typename _Tp>
     struct is_bounded_array
